# what2_grapheme

./: .gitignore  README.md  build.py  build2.py  build2_orig.py  conftest.py  pyproject.toml  tasks.py
bm/: __main__.py  cases.py  gen.py  main.py  ref.py  rng.py  runner.py
src/what2_grapheme/: chunk.py  convert.py  state.py
src/what2_grapheme/cpp/: hello.c  py_hello.cpp  py_hello.pyx
src/what2_grapheme/cy/: _chunk.py  _state.py  to_ord.c  to_ord.html  to_ord.py
src/what2_grapheme/fast_re/: api.py  internal.py
src/what2_grapheme/fast_sm/: break_gen.py  state.py
src/what2_grapheme/grapheme_property/: lookup.py  type.py
src/what2_grapheme/simple_sm/: state.py
tests/: benchmark.py  test_break_egs.py  test_bytes.py  test_consistency.py  test_contains.py  test_cpp.py  test_lookup.py  test_sizes.py  test_slices.py  test_static.py  test_utf_reference_cases.py  test_utf_segmenter_cases.py
